--- a/style.css
+++ b/style.css
@@ -1,7 +1,40 @@
-body {
-  font-family: 'Roboto', sans-serif;
+#dinosaur {
+margin: 0 auto;
+width: 50%;
+background-color: #29cece;
+border-radius: 10px;
+margin-top: 50px;
+padding: 50px;
+}
+
+td, th {
+padding-top: 15px;
+}
+
+th {
+text-align: right;
+padding-right: 10px;
+color: #0c3d3d;
+font-size: large;
+}
+
+input[type="text"] {
+height: 30px;
+width: 200px;
+border-radius: 5px;
+font-size: large;
+padding-left: 5px;
+}
+
+input[type="button"] {
+margin-top: 20px;
+}
+
+input[type="button"] {
+font-size: large;
 }
 
 #result {
-    padding-top: 1em;
+padding-top: 2em;
+font-size: x-large;
 }
