--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-
 #dinosaur {
 margin: 0 auto;
 width: 50%;
@@ -10,6 +9,11 @@ background-color: #29cece;
 border-radius: 10px;
 margin-top: 50px;
 padding: 50px;
+}
+
+table {
+margin: 0 auto;
+width: 100%;
 }
 
 td, th {
@@ -25,7 +29,7 @@ font-size: large;
 
 input[type="text"] {
 height: 30px;
-width: 200px;
+width: 100%;
 border-radius: 5px;
 font-size: large;
 padding-left: 5px;
